--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -16,7 +16,7 @@ jobs:
           java-package: jdk
           architecture: x64
       - name: Build with Maven
-        run: mvn -B verify
+        run: mvn -s settings.xml -B verify
       - name: Publish to GitHub Packages
         env:
           GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
