--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -15,14 +15,10 @@ jobs:
           java-version: 15
           java-package: jdk
           architecture: x64
+      - name: Build with Maven
+        run: mvn -s settings.xml -B verify
       - name: Publish to GitHub Packages
         env:
           GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
           GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          NEW_VERSION=$(echo "${GITHUB_REF}" | cut -d "/" -f3)
-          echo "New version: ${NEW_VERSION}"
-          mvn -s settings.xml deploy
-        # The GITHUB_REF tag comes in the format 'refs/tags/xxx'.
-        # If we split on '/' and take the 3rd value,
-        # we can get the release name.
+        run: mvn -s settings.xml -B deploy
