--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>ru.gunmarket</groupId>
             <artifactId>query-builder</artifactId>
-            <version>1.0</version>
+            <version>${querybuilder.version}</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -75,7 +75,7 @@
         <repository>
             <id>yourhockey-maven-github-packages</id>
             <name>GitHub Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/yourhockey</url>
+            <url>https://maven.pkg.github.com/yourhockey/*</url>
         </repository>
     </repositories>
 
